myparser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package myparser;

import syntaxtree.*;

public class MiniJavaParser implements MiniJavaParserConstants {

    static final private int[] jj_la1 = new int[23];
    static final private JJCalls[] jj_2_rtns = new JJCalls[10];
    static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    static public MiniJavaParserTokenManager token_source;
    /**
     * Current token.
     */
    static public Token token;
    /**
     * Next token.
     */
    static public Token jj_nt;
    static JavaCharStream jj_input_stream;
    static private boolean jj_initialized_once = false;
    static private int jj_ntk;
    static private Token jj_scanpos, jj_lastpos;
    static private int jj_la;
    static private int jj_gen;
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private boolean jj_rescan = false;
    static private int jj_gc = 0;
    static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    static private int[] jj_expentry;
    static private int jj_kind = -1;
    static private int[] jj_lasttokens = new int[100];
    static private int jj_endpos;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
    }

    /**
     * Constructor with InputStream.
     */
    public MiniJavaParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public MiniJavaParser(java.io.InputStream stream, String encoding) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser.  ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        try {
            jj_input_stream = new JavaCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new MiniJavaParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public MiniJavaParser(java.io.Reader stream) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser. ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        jj_input_stream = new JavaCharStream(stream, 1, 1);
        token_source = new MiniJavaParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public MiniJavaParser(MiniJavaParserTokenManager tm) {
        if (jj_initialized_once) {
            System.out.println("ERROR: Second call to constructor of static parser. ");
            System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 23; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /************************************
     * The MiniJava Grammar Starts Here *
     ************************************/
    static final public Program Goal() throws ParseException {
        MainClass m;
        ClassDeclList cl = new ClassDeclList();
        ClassDecl c;
        m = MainClass();
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CLASS:
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            c = ClassDeclaration();
            cl.addElement(c);
        }
        jj_consume_token(0);
        {
            if (true) return new Program(m, cl);
        }
        throw new Error("Missing return statement in function");
    }

    static final public MainClass MainClass() throws ParseException {
        Identifier i1, i2;
        VarDecl v;
        VarDeclList vl = new VarDeclList();
        Statement s;
        jj_consume_token(CLASS);
        i1 = Identifier();
        jj_consume_token(LBRACE);
        jj_consume_token(PUBLIC);
        jj_consume_token(STATIC);
        jj_consume_token(VOID);
        jj_consume_token(MAIN);
        jj_consume_token(LPAREN);
        jj_consume_token(STRING);
        jj_consume_token(LSQPAREN);
        jj_consume_token(RSQPAREN);
        i2 = Identifier();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        label_2:
        while (true) {
            if (jj_2_1(2)) {
            } else {
                break label_2;
            }
            v = VarDeclaration();
            vl.addElement(v);
        }
        s = Statement();
        jj_consume_token(RBRACE);
        jj_consume_token(RBRACE);
        {
            if (true) return new MainClass(i1, i2, vl, s);
        }
        throw new Error("Missing return statement in function");
    }

    static final public ClassDecl ClassDeclaration() throws ParseException {
        ClassDecl c;
        if (jj_2_2(3)) {
            c = ClassDeclarationSimple();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case CLASS:
                    c = ClassDeclarationExtends();
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true) return c;
        }
        throw new Error("Missing return statement in function");
    }

    static final public ClassDecl ClassDeclarationSimple() throws ParseException {
        Identifier i;
        VarDecl v;
        VarDeclList vl = new VarDeclList();
        MethodDecl m;
        MethodDeclList ml = new MethodDeclList();
        jj_consume_token(CLASS);
        i = Identifier();
        jj_consume_token(LBRACE);
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case BOOLEAN:
                case INTEGER:
                case IDENTIFIER:
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_3;
            }
            v = VarDeclaration();
            vl.addElement(v);
        }
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PUBLIC:
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_4;
            }
            m = MethodDeclaration();
            ml.addElement(m);
        }
        jj_consume_token(RBRACE);
        {
            if (true) return new ClassDeclSimple(i, vl, ml);
        }
        throw new Error("Missing return statement in function");
    }

    static final public ClassDecl ClassDeclarationExtends() throws ParseException {
        Identifier i1, i2;
        VarDecl v;
        VarDeclList vl = new VarDeclList();
        MethodDecl m;
        MethodDeclList ml = new MethodDeclList();
        jj_consume_token(CLASS);
        i1 = Identifier();
        jj_consume_token(EXTENDS);
        i2 = Identifier();
        jj_consume_token(LBRACE);
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case BOOLEAN:
                case INTEGER:
                case IDENTIFIER:
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    break label_5;
            }
            v = VarDeclaration();
            vl.addElement(v);
        }
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PUBLIC:
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_6;
            }
            m = MethodDeclaration();
            ml.addElement(m);
        }
        jj_consume_token(RBRACE);
        {
            if (true) return new ClassDeclExtends(i1, i2, vl, ml);
        }
        throw new Error("Missing return statement in function");
    }

    static final public VarDecl VarDeclaration() throws ParseException {
        Type t;
        Identifier i;
        t = Type();
        i = Identifier();
        jj_consume_token(SEMICOLON);
        {
            if (true) return new VarDecl(t, i);
        }
        throw new Error("Missing return statement in function");
    }

    static final public MethodDecl MethodDeclaration() throws ParseException {
        Type t;
        Identifier i;
        FormalList fl = new FormalList();
        VarDecl v;
        VarDeclList vl = new VarDeclList();
        Statement s;
        StatementList sl = new StatementList();
        Exp e;
        jj_consume_token(PUBLIC);
        t = Type();
        i = Identifier();
        jj_consume_token(LPAREN);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case BOOLEAN:
            case INTEGER:
            case IDENTIFIER:
                fl = FormalParameterList();
                break;
            default:
                jj_la1[6] = jj_gen;
        }
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        label_7:
        while (true) {
            if (jj_2_3(2)) {
            } else {
                break label_7;
            }
            v = VarDeclaration();
            vl.addElement(v);
        }
        label_8:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case IF:
                case WHILE:
                case PRINT:
                case IDENTIFIER:
                    break;
                default:
                    jj_la1[7] = jj_gen;
                    break label_8;
            }
            s = Statement();
            sl.addElement(s);
        }
        jj_consume_token(RETURN);
        e = Expression();
        jj_consume_token(SEMICOLON);
        jj_consume_token(RBRACE);
        {
            if (true) return new MethodDecl(t, i, fl, vl, sl, e);
        }
        throw new Error("Missing return statement in function");
    }

    static final public FormalList FormalParameterList() throws ParseException {
        FormalList fl = new FormalList();
        Formal f;
        f = FormalParameter();
        fl.addElement(f);
        label_9:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case 47:
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    break label_9;
            }
            f = FormalParameterRest();
            fl.addElement(f);
        }
        {
            if (true) return fl;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Formal FormalParameter() throws ParseException {
        Type t;
        Identifier i;
        t = Type();
        i = Identifier();
        {
            if (true) return new Formal(t, i);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Formal FormalParameterRest() throws ParseException {
        Formal f;
        jj_consume_token(47);
        f = FormalParameter();
        {
            if (true) return f;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Type Type() throws ParseException {
        Type t;
        if (jj_2_4(3)) {
            t = ArrayType();
        } else {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case BOOLEAN:
                    t = BooleanType();
                    break;
                case INTEGER:
                    t = IntegerType();
                    break;
                case IDENTIFIER:
                    t = IdentifierType();
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if (true) return t;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Type ArrayType() throws ParseException {
        jj_consume_token(INTEGER);
        jj_consume_token(LSQPAREN);
        jj_consume_token(RSQPAREN);
        {
            if (true) return new IntArrayType();
        }
        throw new Error("Missing return statement in function");
    }

    static final public Type BooleanType() throws ParseException {
        jj_consume_token(BOOLEAN);
        {
            if (true) return new BooleanType();
        }
        throw new Error("Missing return statement in function");
    }

    static final public Type IntegerType() throws ParseException {
        jj_consume_token(INTEGER);
        {
            if (true) return new IntegerType();
        }
        throw new Error("Missing return statement in function");
    }

    static final public Type IdentifierType() throws ParseException {
        Token t;
        t = jj_consume_token(IDENTIFIER);
        {
            if (true) return new IdentifierType(t.image);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement Statement() throws ParseException {
        Statement s;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LBRACE:
                s = Block();
                break;
            default:
                jj_la1[10] = jj_gen;
                if (jj_2_5(2)) {
                    s = AssignmentStatement();
                } else if (jj_2_6(2)) {
                    s = ArrayAssignmentStatement();
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case IF:
                            s = IfStatement();
                            break;
                        case WHILE:
                            s = WhileStatement();
                            break;
                        case PRINT:
                            s = PrintStatement();
                            break;
                        default:
                            jj_la1[11] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
        }
        {
            if (true) return s;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement Block() throws ParseException {
        Statement s;
        StatementList sl = new StatementList();
        jj_consume_token(LBRACE);
        label_10:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case IF:
                case WHILE:
                case PRINT:
                case IDENTIFIER:
                    break;
                default:
                    jj_la1[12] = jj_gen;
                    break label_10;
            }
            s = Statement();
            sl.addElement(s);
        }
        jj_consume_token(RBRACE);
        {
            if (true) return new Block(sl);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement AssignmentStatement() throws ParseException {
        Identifier i;
        Exp e;
        i = Identifier();
        jj_consume_token(ASSIGN);
        e = Expression();
        jj_consume_token(SEMICOLON);
        {
            if (true) return new Assign(i, e);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement ArrayAssignmentStatement() throws ParseException {
        Identifier i;
        Exp e1, e2;
        i = Identifier();
        jj_consume_token(LSQPAREN);
        e1 = Expression();
        jj_consume_token(RSQPAREN);
        jj_consume_token(ASSIGN);
        e2 = Expression();
        jj_consume_token(SEMICOLON);
        {
            if (true) return new ArrayAssign(i, e1, e2);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement IfStatement() throws ParseException {
        Exp e;
        Statement s1, s2;
        jj_consume_token(IF);
        jj_consume_token(LPAREN);
        e = Expression();
        jj_consume_token(RPAREN);
        s1 = Statement();
        jj_consume_token(ELSE);
        s2 = Statement();
        {
            if (true) return new If(e, s1, s2);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement WhileStatement() throws ParseException {
        Exp e;
        Statement s;
        jj_consume_token(WHILE);
        jj_consume_token(LPAREN);
        e = Expression();
        jj_consume_token(RPAREN);
        s = Statement();
        {
            if (true) return new While(e, s);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Statement PrintStatement() throws ParseException {
        Exp e;
        jj_consume_token(PRINT);
        jj_consume_token(LPAREN);
        e = Expression();
        jj_consume_token(RPAREN);
        jj_consume_token(SEMICOLON);
        {
            if (true) return new Print(e);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp Expression() throws ParseException {
        Exp e;
        e = ConditionalAndExpression();
        {
            if (true) return e;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp ConditionalAndExpression() throws ParseException {
        Exp e1, e2;
        e1 = RelationalExpression();
        label_11:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case 48:
                    break;
                default:
                    jj_la1[13] = jj_gen;
                    break label_11;
            }
            jj_consume_token(48);
            e2 = RelationalExpression();
            e1 = new And(e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp RelationalExpression() throws ParseException {
        Exp e1, e2;
        e1 = AdditiveExpression();
        label_12:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LT:
                    break;
                default:
                    jj_la1[14] = jj_gen;
                    break label_12;
            }
            jj_consume_token(LT);
            e2 = AdditiveExpression();
            e1 = new LessThan(e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp AdditiveExpression() throws ParseException {
        Exp e1, e2;
        int opType;
        Token t;
        e1 = MultiplicativeExpression();
        label_13:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                case MINUS:
                    break;
                default:
                    jj_la1[15] = jj_gen;
                    break label_13;
            }
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case PLUS:
                    t = jj_consume_token(PLUS);
                    break;
                case MINUS:
                    t = jj_consume_token(MINUS);
                    break;
                default:
                    jj_la1[16] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
            opType = t.kind;
            e2 = MultiplicativeExpression();
            e1 = (opType == PLUS) ? new Plus(e1, e2) : new Minus(e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp MultiplicativeExpression() throws ParseException {
        Exp e1, e2;
        e1 = PrimaryExpressionWithSuffix();
        label_14:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case 49:
                    break;
                default:
                    jj_la1[17] = jj_gen;
                    break label_14;
            }
            jj_consume_token(49);
            e2 = PrimaryExpressionWithSuffix();
            e1 = new Times(e1, e2);
        }
        {
            if (true) return e1;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp PrimaryExpressionWithSuffix() throws ParseException {
        Exp e;
        e = PrimaryExpression();
        label_15:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LSQPAREN:
                case DOT:
                    break;
                default:
                    jj_la1[18] = jj_gen;
                    break label_15;
            }
            if (jj_2_7(2147483647)) {
                e = ArrayLookup(e);
            } else if (jj_2_8(2147483647)) {
                e = ArrayLength(e);
            } else if (jj_2_9(2147483647)) {
                e = MessageSend(e);
            } else {
                jj_consume_token(-1);
                throw new ParseException();
            }
        }
        {
            if (true) return e;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp ArrayLookup(Exp e) throws ParseException {
        Exp e2;
        jj_consume_token(LSQPAREN);
        e2 = Expression();
        jj_consume_token(RSQPAREN);
        {
            if (true) return new ArrayLookup(e, e2);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp ArrayLength(Exp e) throws ParseException {
        jj_consume_token(DOT);
        jj_consume_token(LENGTH);
        {
            if (true) return new ArrayLength(e);
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp MessageSend(Exp e) throws ParseException {
        Identifier i;
        ExpList el = new ExpList();
        jj_consume_token(DOT);
        i = Identifier();
        jj_consume_token(LPAREN);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case LPAREN:
            case NOT:
            case FALSE:
            case NEW:
            case THIS:
            case TRUE:
            case INTEGER_LITERAL:
            case IDENTIFIER:
                el = ExpressionList();
                break;
            default:
                jj_la1[19] = jj_gen;
        }
        jj_consume_token(RPAREN);
        {
            if (true) return new Call(e, i, el);
        }
        throw new Error("Missing return statement in function");
    }

    static final public ExpList ExpressionList() throws ParseException {
        Exp e1, e2;
        ExpList el = new ExpList();
        e1 = Expression();
        el.addElement(e1);
        label_16:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case 47:
                    break;
                default:
                    jj_la1[20] = jj_gen;
                    break label_16;
            }
            e2 = ExpressionRest();
            el.addElement(e2);
        }
        {
            if (true) return el;
        }
        throw new Error("Missing return statement in function");
    }

    static final public Exp ExpressionRest() throws ParseException {
        Exp e;
        jj_consume_token(47);
        e = Expression();
        {
            if (true) return e;
        }
        throw new Error("Missing return statement in function");
    }
